Nucleus fixes for horizontal scrollbar sometimes appearing during breakpoints

--- a/engines/common/nucleus/css-compiled/nucleus.css
+++ b/engines/common/nucleus/css-compiled/nucleus.css
@@ -58,6 +58,7 @@ body {
 #g-page-surround {
   min-height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 
 article,
