--- a/engines/common/nucleus/scss/nucleus/_core.scss
+++ b/engines/common/nucleus/scss/nucleus/_core.scss
@@ -22,6 +22,7 @@ body {
 #g-page-surround {
 	min-height: 100vh;
     position: relative;
+    overflow: hidden;
 }
 
 article,
